RESOLVED FIXED193174
[WPE][GTK] Building with ENABLE_VIDEO=OFF fails trying to use Document MediaPlayback functions.
https://bugs.webkit.org/show_bug.cgi?id=193174
Summary [WPE][GTK] Building with ENABLE_VIDEO=OFF fails trying to use Document MediaP...
Pablo Saavedra
Reported 2019-01-06 01:50:32 PST
Error building wpewebkit with `-DENABLE_VIDEO=OFF`: ``` In file included from DerivedSources/WebCore/unified-sources/UnifiedSource294.cpp:3: /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp: In member function 'void WebCore::Page::stopAllMediaPlayback()': /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp:1723:23: error: 'class WebCore::Document' has no member named 'stopAllMediaPlayback' document->stopAllMediaPlayback(); ^~~~~~~~~~~~~~~~~~~~ /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp: In member function 'void WebCore::Page::suspendAllMediaPlayback()': /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp:1735:23: error: 'class WebCore::Document' has no member named 'suspendAllMediaPlayback' document->suspendAllMediaPlayback(); ^~~~~~~~~~~~~~~~~~~~~~~ /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp: In member function 'void WebCore::Page::resumeAllMediaPlayback()': /home/igalia/psaavedra/yocto-wandboard-wpe/builds/wandboard-mesa-wpe-alternative/tmp/work/armv7at2hf-neon-imx-poky-linux-gnueabi/wpewebkit/nightly-AUTOINC+01f1bceaa5-r0/git/Source/WebCore/page/Page.cpp:1750:23: error: 'class WebCore::Document' has no member named 'resumeAllMediaPlayback' document->resumeAllMediaPlayback(); ``` L1723 in Source/WebCore/page/Page.cpp: ``` void Page::stopAllMediaPlayback() { for (Frame* frame = &mainFrame(); frame; frame = frame->tree().traverseNext()) { if (auto* document = frame->document()) document->stopAllMediaPlayback(); <<<<<<<<< } } ``` But those functions are only enabled with VIDEO flag ON, L1706 in Source/WebCore/dom/Document.cpp: ``` #if ENABLE(VIDEO) void Page::stopAllMediaPlayback() void Page::suspendAllMediaPlayback() void Page::resumeAllMediaPlayback() #endif ```
Attachments
patch (2.01 KB, patch)
2019-01-06 01:54 PST, Pablo Saavedra
no flags
Pablo Saavedra
Comment 1 2019-01-06 01:54:18 PST
Pablo Saavedra
Comment 2 2019-01-06 01:58:52 PST
Related to changes implemented in: commit 9e27b18c493250dd2117ada4efa758fcc58a0f14 Author: jer.noble@apple.com <jer.noble@apple.com@268f45cc-cd09-0410-ab3c-d52691b4dbfc> Date: Fri Jan 4 22:23:15 2019 +0000 [WebKitLegacy] Media playback pauses on scroll https://bugs.webkit.org/show_bug.cgi?id=192829 Reviewed by Eric Carlson.
WebKit Commit Bot
Comment 3 2019-01-06 09:15:38 PST
Comment on attachment 358457 [details] patch Clearing flags on attachment: 358457 Committed r239663: <https://trac.webkit.org/changeset/239663>
WebKit Commit Bot
Comment 4 2019-01-06 09:15:39 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.