[WPE][GTK] Building with ENABLE_VIDEO=OFF fails trying to use Document MediaPlayback functions. https://bugs.webkit.org/show_bug.cgi?id=193174

Patch by Pablo Saavedra <psaavedra@igalia.com> on 2019-01-06
Reviewed by Michael Catanzaro.

* page/Page.cpp:
(WebCore::Page::stopAllMediaPlayback):
(WebCore::Page::suspendAllMediaPlayback):
(WebCore::Page::resumeAllMediaPlayback):

Canonical link: https://commits.webkit.org/207689@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239663 268f45cc-cd09-0410-ab3c-d52691b4dbfc